création et configuration du projet