@@ -1,2 +1,20 @@
 # FastMath
 Projet java 3e année - solveur mathématique
+
+Dead line : 23/05/2020
+
+## Setup
+
+JavaFX project
+
+### Requirements
+
+SDK 13.0.1
+
+jafaFX sdk 11.0.2
+
+VM option : --module-path <yourPath>\javafx-sdk-11.0.2\lib --add-modules javafx.controls,javafx.fxml
+
+### Plugin
+
+JetBrain - PMDPugin (plugins.jetbrains.com/plugin/1137-pmdplugin) -> modifier (simplifier) les règles
